--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    // dependency for picasso for loading image from url
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    // dependency for firebase database.
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    // dependency for firebase authentication.
+    implementation 'com.google.firebase:firebase-auth'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
