--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUDFirebase">
         <activity
-            android:name=".LoginActivity"
-            android:exported="true" >
-
+            android:name=".ui.EditCourseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AddCourseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:name=".ui.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
