--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     // dependency for firebase authentication.
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 
 
     testImplementation 'junit:junit:4.13.2'
